# llamba

./: CMakeLists.txt  Makefile  README.md  index.md  package.xml
include/llamba/algorithms/: bresenham.hpp  forward.hpp  odometry.hpp  staticmap.hpp
include/llamba/base/: abstract_parallel.hpp  adjoint_parallel.hpp  blue_channel_parallel.hpp  complex_parallel.hpp  determinant_parallel.hpp  grayscale_parallel.hpp  green_channel_parallel.hpp  inverse_parallel.hpp  multiply_parallel.hpp  red_channel_parallel.hpp  sum_parallel.hpp
include/llamba/benchmark/: benchmark.hpp
include/llamba/generators/: generator.hpp  json_generator.hpp  single_generator.hpp
include/llamba/interfaces/: base_parallel.hpp
include/llamba/iterators/: iterators.hpp
include/llamba/overloading/: overloading.hpp
include/llamba/settings/: affinity.hpp  parallelization_strategy.hpp  scheduling_strategy.hpp  settings.hpp  time_format.hpp
measurements/: readme.txt
parallel/: abstract.parallel  blue_channel.parallel  complex.parallel  grayscale.parallel  green_channel.parallel  red_channel.parallel  sum.parallel
python_bindings/: benchmarks.py  test.py
python_bindings/bindings/blue_channel_binding/: blue_channel.cpp  blue_channel.hpp
python_bindings/bindings/bresenham_binding/: bresenham.cpp  bresenham.hpp
python_bindings/bindings/grayscale_binding/: grayscale.cpp  grayscale.hpp
python_bindings/bindings/multiplication_binding/: multiplication.cpp  multiplication.hpp
python_bindings/bindings/summation_binding/: summation.cpp  summation.hpp
python_bindings/helpers/: execution_time_calculation.hpp  return_container.hpp
python_bindings/llamba_python_wrappers/: blue_channel.py  bresenham.py  grayscale.py  multiplication.py  result_struct.py  summation.py
python_bindings/python_wrappers/: blue_channel.py  bresenham.py  grayscale.py  multiplication.py  result_struct.py  summation.py
scripts/: generate_visuals.py  hardware_information.py  parallelize_functions.py
scripts/base/: base.txt
src/: abstract_parallel_test.cpp  abstraction_benchmark.cpp  blue_channel_extraction.cpp  bresenham_benchmark.cpp  complex_parallel_test.cpp  forward_benchmark.cpp  grayscale_benchmark.cpp  inversion_benchmark.cpp  main.cpp  multiplication_benchmark.cpp  odometry_benchmark.cpp  ros_benchmarks.cpp  ros_multiplication_benchmark.cpp  staticmap_benchmark.cpp  summation_benchmark.cpp
src/benchmark_component/: 01_multiplication_benchmark_llamba.cpp  02_summation_benchmark_llamba.cpp  03_grayscale_benchmark_llamba.cpp  04_blue_channel_extraction_benchmark_llamba.cpp
src/parallelization_component/: 01_multiplication_benchmark.cpp  02_summation_benchmark.cpp  03_bresenham_benchmark.cpp  04_staticmap_benchmark.cpp  05_forward_benchmark.cpp  06_grayscale_benchmark.cpp  07_blue_channel_extraction_benchmark.cpp
tests/: adjoint_parallel_test.cpp  blue_channel_parallel_test.cpp  determinant_parallel_test.cpp  grayscale_parallel_test.cpp  green_channel_parallel_test.cpp  inverse_parallel_test.cpp  multiply_parallel_test.cpp  red_channel_parallel_test.cpp  sum_parallel_test.cpp
